--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <nav>
         <ul class="menu">
         </ul>
-       
       </nav>
     </header>
     <main>
@@ -39,7 +38,7 @@
               <p class="logo_description_subtitle">Yard Maintenance</p>
             </div>
           </div>
-          <button class="btn button_start">Start your Adventure</button>
+          <button class="btn button_start">We’re here for your lawn</button>
           <p class="hero_title">A healthy lawn with Round Rock</p>
           <button class="btn button_help">Help Me</button>
         </div>
@@ -199,7 +198,10 @@
           </div>
         </div>
       </section>
-
+      <a href="#secrices" class="goToTop">
+        <img src="./media/arrow.svg"
+          alt="Touch to go up">
+      </a>
     </main>
     <footer>
       © 2023 Round Rock. All Rights Reserved
