Added comments, more media files, some refactoring

--- a/index.html
+++ b/index.html
@@ -48,24 +48,18 @@
         <div class="services_offers">
           <div class="card">
             <img src="./media/4.png" alt="">
-            <h1>Lorem Ipsum is simply</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled</p>
+            <h1>Lawn care</h1>
+            <p>We offer mowing services for your home or property. Our lawn mowing service includes edging along concrete surface and flowerbeds and trimming the perimeter of the lawn. Our team will also remove debris from the clippings.</p>
           </div>
           <div class="card">
             <img src="./media/2.png" alt="">
-            <h1>Lorem Ipsum is simply</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled</p>
+            <h1>Landscaping</h1>
+            <p>Our team of professional landscapers are here to help you create and maintain a beautiful yard. We work with nurseries and suppliers to get the best landscaping products for the job. We offer everything from sod replacement, planting, mulching and much more.</p>
           </div>
           <div class="card">
             <img src="./media/3.png" alt="">
-            <h1>Lorem Ipsum is simply</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-              industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-              scrambled</p>
+            <h1>Property Cleanup</h1>
+            <p>Depending on your yard and the season, property cleanups tend to include pulling weeds, leaf removal, bush trimming or spraying weeds in gravel areas and water feature cleaning. To prevent damage to your grass, removing pine needles and leaves is very important.</p>
           </div>
         </div>
         <button class="btn button_help">Help Me</button>
@@ -101,7 +95,7 @@
         <div class="testymonials_items">
           <div class="testymonials_card">
             <div class="testymonials_card_img">
-              <img src="./media/emptyUser.svg" alt="User Image">
+              <img src="./media/user1.svg" alt="User Image">
             </div>
             <div class="testymonials_card_body">
               <div class="testymonials_card_title">Courtney Henry</div>
@@ -119,7 +113,7 @@
           </div>
           <div class="testymonials_card">
             <div class="testymonials_card_img">
-              <img src="./media/emptyUser.svg" alt="User Image">
+              <img src="./media/user2.svg" alt="User Image">
             </div>
             <div class="testymonials_card_body">
               <div class="testymonials_card_title">Courtney Henry</div>
@@ -137,7 +131,7 @@
           </div>
           <div class="testymonials_card">
             <div class="testymonials_card_img">
-              <img src="./media/emptyUser.svg" alt="User Image">
+              <img src="./media/user3.svg" alt="User Image">
             </div>
             <div class="testymonials_card_body">
               <div class="testymonials_card_title">Courtney Henry</div>
@@ -155,7 +149,7 @@
           </div>
           <div class="testymonials_card">
             <div class="testymonials_card_img">
-              <img src="./media/emptyUser.svg" alt="User Image">
+              <img src="./media/user4.svg" alt="User Image">
             </div>
             <div class="testymonials_card_body">
               <div class="testymonials_card_title">Courtney Henry</div>
