Updated Formated code

--- a/index.html
+++ b/index.html
@@ -49,17 +49,23 @@
           <div class="card">
             <img src="./media/4.png" alt="">
             <h1>Lawn care</h1>
-            <p>We offer mowing services for your home or property. Our lawn mowing service includes edging along concrete surface and flowerbeds and trimming the perimeter of the lawn. Our team will also remove debris from the clippings.</p>
+            <p>We offer mowing services for your home or property. Our lawn mowing service includes edging along
+              concrete surface and flowerbeds and trimming the perimeter of the lawn. Our team will also remove debris
+              from the clippings.</p>
           </div>
           <div class="card">
             <img src="./media/2.png" alt="">
             <h1>Landscaping</h1>
-            <p>Our team of professional landscapers are here to help you create and maintain a beautiful yard. We work with nurseries and suppliers to get the best landscaping products for the job. We offer everything from sod replacement, planting, mulching and much more.</p>
+            <p>Our team of professional landscapers are here to help you create and maintain a beautiful yard. We work
+              with nurseries and suppliers to get the best landscaping products for the job. We offer everything from
+              sod replacement, planting, mulching and much more.</p>
           </div>
           <div class="card">
             <img src="./media/3.png" alt="">
             <h1>Property Cleanup</h1>
-            <p>Depending on your yard and the season, property cleanups tend to include pulling weeds, leaf removal, bush trimming or spraying weeds in gravel areas and water feature cleaning. To prevent damage to your grass, removing pine needles and leaves is very important.</p>
+            <p>Depending on your yard and the season, property cleanups tend to include pulling weeds, leaf removal,
+              bush trimming or spraying weeds in gravel areas and water feature cleaning. To prevent damage to your
+              grass, removing pine needles and leaves is very important.</p>
           </div>
         </div>
         <button class="btn button_help">Help Me</button>
@@ -193,8 +199,7 @@
         </div>
       </section>
       <a href="#secrices" class="goToTop">
-        <img src="./media/arrow.svg"
-          alt="Touch to go up">
+        <img src="./media/arrow.svg" alt="Touch to go up">
       </a>
     </main>
     <footer>
