--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <button class="btn button_help">Help Me</button>
       </section>
-      <section id="about">
+      <section id="about us">
         <div class="title">About us</div>
         <div class="about_history">
           <div class="about_history_points">
@@ -173,7 +173,7 @@
           </div>
         </div>
       </section>
-      <section id="contact">
+      <section id="contact us">
         <div class="title">Contact us</div>
         <div class="contact_items">
           <form>
